<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/appbackground"
        tools:context=".MainFragment">
        <TextView
            android:id="@+id/mainHeadingText"
            android:layout_width="match_parent"
            android:layout_height='wrap_content'
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text"
            android:layout_marginBottom="10dp"
            android:text="@string/headingTxt"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:background="@drawable/rounded_signinbutton"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.874" />
        <TextView
            android:id="@+id/text"
            android:textSize="18sp"
            android:text="@string/longText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            />
        <TextView
            android:id="@+id/createAccountTv"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:text="@string/create_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signInButton"
            android:textColor="#FFFFFF"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
