<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:cardCornerRadius="15dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imgOfCity"
                android:src="@drawable/arangkel"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tourHeading"/>
            <TextView
                android:id="@+id/tourHeading"
                style="@style/sHeadingStyle"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/kashmir_tour"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgOfCity" />
            <TextView
                android:id="@+id/tourPrice"
                style="@style/sHeadingStyle"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/_12000"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toEndOf="@id/tourHeading"
                app:layout_constraintTop_toBottomOf="@id/imgOfCity" />
            <ImageView
                android:id="@+id/startDestinationIV"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:src="@drawable/ic_location_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tourHeading" />

            <TextView
                android:id="@+id/startDestinationHeading"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:text="@string/islamabad"
                app:layout_constraintStart_toEndOf="@id/startDestinationIV"
                app:layout_constraintTop_toBottomOf="@id/tourHeading"
                style="@style/SmallHeadingStyle"
                />
            <TextView
                android:id="@+id/startTime"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/tourHeading"
                app:layout_constraintStart_toEndOf="@id/startTimeIV"
                android:text="8:30"
                style="@style/SmallHeadingStyle"/>
            <ImageView
                android:id="@+id/startTimeIV"
                android:src="@drawable/ic_access_time_24"
                app:layout_constraintStart_toEndOf="@id/startDestinationHeading"
                app:layout_constraintTop_toBottomOf="@id/tourHeading"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>
            <TextView
                android:id="@+id/startDateHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/startDestinationHeading"
                android:text="@string/september_3rd"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/SmallHeadingStyle"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>